--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <form class="donate-form">
-        <h1 id="total-amount">28$</h1>
+        <h1 id="total-amount">
+            <!-- 28$ -->
+        </h1>
         <label class="donate-form__input-label"> 
               Введите сумму в $
               <input class="donate-form__donate-input" name="amount" type="number" max="100" min="1" required="">
@@ -18,6 +20,7 @@
         </button> 
     </form>
     
+    <!--
     <div class="donates-container"> 
         <h2 class="donates-container__title">Список донатов</h2> 
         <div class="donates-container__donates"> 
@@ -26,6 +29,7 @@
            <div class="donate-item">July 6th 2021, 10:28:49 am - <b>3$</b></div>
            <div class="donate-item">July 6th 2021, 10:28:49 am - <b>1$</b></div> 
         </div>
+        -->
      </div>
 </body>
 </html>
